@@ -2,6 +2,7 @@
 //
 // ----------------------------------------------------------------------------
 // Copyright (C) 1998, 1999, 2000 Red Hat, Inc.
+// Copyright (C) 2003 John Dallaway
 //
 // This program is part of the eCos host tools.
 //
@@ -27,7 +28,7 @@
 //===========================================================================
 //#####DESCRIPTIONBEGIN####
 //
-// Author(s):   julians
+// Author(s):   julians, jld
 // Contact(s):  julians
 // Date:        2001/04/04
 // Version:     $Id: docsystem.cpp,v 1.19 2001/12/11 15:59:51 julians Exp $
@@ -794,7 +795,7 @@ wxString ecHtmlIndexer::FindIndexFilesDir(const wxString& reposDir)
             }
             wxString name(ecMakeNameFromPath(reposDir));
             wxString ecosVerDir = ecosDir + sep + name;
-            if (!wxFileExists(ecosVerDir))
+            if (!wxDirExists(ecosVerDir))
             {
                 wxMkdir(ecosVerDir);
             }
